rust/transpiler/snapshots/basic@no_separator@injections.snap
---
source: transpiler/tests/golden_tests.rs
expression: "serde_json::json!({\n    \"ranges\": result.ranges, \"injections\": result.injections,\n})"
input_file: transpiler/tests/basic/no_separator.hyper
---
injections: []
ranges: []
