rust/transpiler/snapshots/basic@self_closing@injections.snap
---
source: transpiler/tests/golden_tests.rs
expression: "serde_json::json!({\n    \"ranges\": result.ranges, \"injections\": result.injections,\n})"
input_file: transpiler/tests/basic/self_closing.hyper
---
injections: []
ranges: []
