rust/transpiler/snapshots/basic@void_elements@injections.snap
---
source: transpiler/tests/golden_tests.rs
expression: "serde_json::json!({\n    \"ranges\": result.ranges, \"injections\": result.injections,\n})"
input_file: transpiler/tests/basic/void_elements.hyper
---
injections: []
ranges: []
