rust/transpiler/snapshots/basic@void_elements@output.snap
---
source: transpiler/tests/golden_tests.rs
expression: r.code.trim()
input_file: transpiler/tests/basic/void_elements.hyper
---
def VoidElements() -> str:
    _parts = []
    _parts.append("""<br /><hr /><img src="photo.jpg" alt="Photo" /><input type="text" name="field" /><meta charset="utf-8" /><link rel="stylesheet" href="style.css" />""")
    return "".join(_parts)
